# cmsis-mlek-examples

./: .gitignore  README.md  vcpkg-configuration.json
.github/workflows/: AC6_test_build.yaml  GCC_test_build.yaml  test_audio.yaml  test_build.yaml
Alif/: README.md
Alif/AppKit_D3/MLEK_AV_DualCore/: README.md  cdefault.yml  mlek_dual.csolution.yml  vcpkg-configuration.json
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Keyword_Spotting/: cdefault.yml
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Keyword_Spotting/board/AppKit-E7_M55_HE/: AppKit-E7-AIML.h  Board_HE.clayer.yml  linker_gnu_mram_custom.ld.src
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Keyword_Spotting/kws/: .clangd  kws.Debug-Live_Stream+AE722F80F55D5LS.cbuild.yml  kws.cproject.yml
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Keyword_Spotting/kws/src/: main_kws.cpp
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/: cdefault.yml
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/board/AppKit-E7_M55_HP/: README.md  ext_init.h  main.c
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/board/Corstone-320/: Board.clayer.yml
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/object-detection/: .clangd  object-detection.Debug-Live_Stream+AE722F80F55D5LS.cbuild.yml  object-detection.cproject.yml
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/object-detection/include/: VideoSource.hpp  image_processing_func.h
Alif/AppKit_D3/MLEK_AV_DualCore/MLEK_Object_Detection/object-detection/src/: VideoSource_File.cpp  image_processing_func.c
Alif/AppKit_D3/MLEK_Audio/: README.md  cdefault.yml  mlek_audio.csolution.yml
Alif/AppKit_D3/MLEK_Audio/board/AppKit-E7_M55_HE/: Board_HE.clayer.yml  README.md  ethosu_cb_dcache.c  linker_gnu_mram_custom.ld.src  main.c
Alif/AppKit_D3/MLEK_Audio/board/Corstone-315/: Board-U65.clayer.yml
Alif/AppKit_D3/MLEK_Audio/board/Corstone-320/: main.h
Alif/AppKit_D3/MLEK_Audio/kws/: .clangd  kws.cproject.yml
Alif/AppKit_D3/MLEK_Audio/kws/RTE/CMSIS/: RTX_Config.h
Alif/AppKit_D3/MLEK_Audio/kws/RTE/_Debug-Live_Stream_AE722F80F55D5LS/: RTE_Components.h
Alif/AppKit_D3/MLEK_Audio/kws/RTE/_Debug-Live_Stream_AVH-SSE-300/: Pre_Include_Global.h  RTE_Components.h
Alif/AppKit_D3/MLEK_Audio/kws/src/: AudioSource_Live.cpp  AudioSource_WAV.cpp
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/: README.md  mlek_audio.csolution.yml
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/board/Corstone-310/: Board-U65.clayer.yml
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/board/Corstone-320/: Board-U85.clayer.yml
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/kws/: kws.Debug-Live_Stream+AE722F80F55D5LS.cbuild.yml
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/kws/include/: AudioSource.hpp
Alif/AppKit_D3/MLEK_Keyword_Spotting_and_Audio_User_Algorithm_Template/resources/: files.md
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/: README.md  mlek_video.csolution.yml  vcpkg-configuration.json
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/board/AppKit-E7_M55_HP/: main.c
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/board/Corstone-310/: Board-U55.clayer.yml  main.h
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/board/Corstone-315/: Board.clayer.yml
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/resources/: files.md
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/tmp/object-detection.Debug-Live_Stream+AE722F80F55D5LS/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
Alif/AppKit_D3/MLEK_Object_Detection_and_Video_User_Algorithm_Template/tmp/object-detection.Debug-Live_Stream+AE722F80F55D5LS/tmp/: object-detection.Debug-Live_Stream+AE722F80F55D5LS-cfgcmd.txt  object-detection.Debug-Live_Stream+AE722F80F55D5LS-mkdirs.cmake
Alif/AppKit_D3/MLEK_Video/: cdefault.yml  mlek_video.csolution.yml
Alif/AppKit_D3/MLEK_Video/board/AppKit-E7_M55_HP/: Board_HP.clayer.yml  linker_gnu_mram_custom.ld.src
Alif/AppKit_D3/MLEK_Video/board/Corstone-300/: Board.clayer.yml
Alif/AppKit_D3/MLEK_Video/board/Corstone-310/: Board.clayer.yml
Alif/AppKit_D3/MLEK_Video/object-detection/: .clangd  object-detection.cproject.yml
Alif/AppKit_D3/MLEK_Video/object-detection/RTE/CMSIS/: RTX_Config.h
Alif/AppKit_D3/MLEK_Video/object-detection/config/: AppConfiguration.hpp  VideoConfiguration.hpp
Alif/AppKit_D3/MLEK_Video/object-detection/include/: BufAttributes.hpp
Alif/AppKit_D3/MLEK_Video/object-detection/src/: VideoSource_Live.cpp  main_object_detection.cpp
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/: TFLiteRT_HelloWorld.csolution.yml  cdefault.yml
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Board/AppKit-E7_M55_HE/: Board_HE.clayer.yml  ext_init.c  linker_gnu_mram_custom.ld.src
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Model/: model.clayer.yml  model_float.c  model_int8.c
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/RTE/_Debug_AE722F80F55D5LS/: Pre_Include_Global.h  RTE_Components.h
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Source/: hello_world_test.cpp
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Training/: train_HelloWorld_model.ipynb
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Training/models/: model.keras  model_float.tflite  model_int8.tflite  model_int8_vela.c  model_int8_vela.tflite
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Training/models.bak/: model.keras  model_float.c  model_float.tflite  model_int8.c  model_int8.tflite
Alif/AppKit_D3/Tensorflow_LiteRT_HelloWorld/Training/models_vela.bak/: model_int8_summary_Ethos_U55_High_End_Embedded.csv  model_int8_vela.c  model_int8_vela.tflite
(+18 files in other folders)
